--- a/bostrap/index.html
+++ b/bostrap/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body class="bg-primary">
-        <h1 class=" p-4 m-3 bg-primary border-top"> start bostrap feelimg amazing</h1>
+        <h1 class=" p-4 m-3 bg-danger border-top"> start bostrap feelimg amazing</h1>
       <div class="border border-primary border-4">
           <h1>this is test border</h1>
       </div>
@@ -19,7 +19,7 @@
         this is test border pill
       </div>
       <br>
-     
+     <p class="h1">pragraph act like e h1</p>
       <!-- bacjkground -->
       <p class="bg-primary text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, vero.</p>
         <p class="p-3 mb-2 bg-info text-dark ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, eum obcaecati deleniti
