--- a/bostrap/images.html
+++ b/bostrap/images.html
@@ -11,6 +11,10 @@
     </head>
 
     <body>
+
+
+  
+      <img src="images/fg.jpg" class=" w-25 rounded mx-auto  d-block" alt="...">
         <img class=" w-25 rounded mx-auto d-block " src="images/Project Cover4.png" alt="">
         <table class="table table-striped table-bordered table-hover">
             <thead>
