--- a/bostrap/responsible/index.html
+++ b/bostrap/responsible/index.html
@@ -13,7 +13,62 @@
 
     <body>
 
-        <h1>Bostrap responsive website started</h1>
+        <h1 class=" text-center w-50 mt-10 mx-auto border rounded-pill bg-success">Bostrap responsive website started
+        </h1>
+        <div
+            class="bg-primary text-white p-3 m-3 border border-danger border-2 rounded-pill shadow-lg w-25 mx-auto text-center">
+            Fill up this form </div>
+
+
+        <!-- <form action="">
+            <input type="text">
+            <br>
+            <input type="text">
+            <br>
+            <button>submit</button>
+
+
+
+
+        </form> -->
+        <div class=" w-50 mx-auto">
+            <form>
+                <div class=" form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                    <!-- <label for="floatingInput" class="form-label">Email address</label> -->
+                    <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">-->
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="  form-floating mb-3">
+
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+
+
+                    <div class="col-auto">
+                        <span id="passwordHelpInline" class="form-text">
+                            Must be 8-20 characters long.
+                        </span>
+                    </div>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <label class="form-check-label" for="exampleCheck1">Select Quantity</label>
+                <select class="form-select-sm mb-4" aria-label="Default select example">
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+                <div class="mb-3">
+                    <input class="form-control" type="file" id="formFile">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
