--- a/bostrap/responsible/flexbox.html
+++ b/bostrap/responsible/flexbox.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-</head>
-<body>
-<h2>flexible horel room</h2>
-<div class="w-25 border border-primary m-1">
-    <img class="img-fluid" src="/bostrapres/images/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
-    <h2>single room</h2>
-</div>
-<div class="w-25 border border-primary m-1">
-    <img class="img-fluid" src="/bostrapres/images/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
-    <h2>single room</h2>
-</div>
-<div class="w-25 border border-primary m-1">
-    <img class="img-fluid" src="/bostrapres/images/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
-    <h2>Family room</h2>
-</div>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+    </head>
+
+    <body>
+        <h2>flexible horel room</h2>
+        <div class="d-flex justify-content-evenly ">
+            <div class="w-25 border border-primary m-1 order-2 bd-highlight">
+                <img class="img-fluid"
+                    src="/bostrapres/images/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
+                <h2>single room</h2>
+            </div>
+            <div class="w-25 border border-primary m-1 align-self-start order-3">
+                <img class="img-fluid"
+                    src="/bostrapres/images/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
+                <h2>singled room</h2>
+            </div>
+            <div class="w-25 border border-primary m-1 order-1">
+                <img class="img-fluid"
+                    src="/bostrapres/images/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
+                <h2>Family room</h2>
+            </div>
+        </div>
 
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+        <script src="js/bootstrap.bundle.min.js"></script>
+    </body>
+
 </html>
