--- a/bostrap/responsible/gridcard.html
+++ b/bostrap/responsible/gridcard.html
@@ -8,12 +8,51 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
+
+
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+      <!-- body section start -->
     <h1>Now i i'm shopping mood.i find e bags but i can;T find that</h1>
     <section class="container">
-        <div class="row g-4 row-cols-lg-4 ">
+        <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-1  g-4 ">
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/jackets/jacket-1.png" class="card-img-top" alt="...">
+                <div class="card" style="width: 20rem;">
+                    <img class="img-fluid" src="images/jackets/jacket-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -23,7 +62,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/jackets/jacket-2.png" class="card-img-top" alt="...">
+                    <img class="img-fluid" src="images/jackets/jacket-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -32,7 +71,7 @@
                   </div>
             </div><div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/jackets/jacket-3.png" class="card-img-top" alt="...">
+                    <img class="img-fluid" src="images/jackets/jacket-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -41,7 +80,7 @@
                   </div>
             </div><div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/jackets/jacket-4.png" class="card-img-top" alt="...">
+                    <img class="img-fluid" src="images/jackets/jacket-4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -50,7 +89,7 @@
                   </div>
             </div><div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/jackets/jacket-5.png" class="card-img-top" alt="...">
+                    <img class="img-fluid" src="images/jackets/jacket-5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -60,7 +99,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/jackets/jacket-6.png" class="card-img-top" alt="...">
+                    <img class="img-fluid" src="images/jackets/jacket-6.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -71,5 +110,8 @@
         </div>
 
     </section>
+
+    
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
